[package]
name = "piholectl"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
readme = "README.md"
description = "Command line tool to manage Pi-Hole instances"
repository = "https://github.com/Scratchcat1/piholectl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gumdrop = "0.8"
clap = { version = "3.2", features = [ "derive" ]}
humantime = "2.1"
pi-hole-api = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
directories = "4.0"
cli-table = "0.4"

[profile.release]
lto = true